[package]
name = "ring-compat"
version = "0.4.0-pre"
description = """
Compatibility crate for using RustCrypto's traits with the cryptographic
algorithm implementations from *ring*
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ring-compat"
repository = "https://github.com/RustCrypto/ring-compat"
categories = ["cryptography", "no-std"]
keywords = ["aead", "digest", "crypto", "ring", "signature"]
edition = "2021"
rust-version = "1.56"

[dependencies]
generic-array = { version = "0.14", default-features = false }
opaque-debug = "0.3"
ring = { version = "0.16", default-features = false }
zeroize = { version = "1", default-features = false }

# optional features
aead = { version = "0.4", optional = true, default-features = false }
digest = { version = "0.9", optional = true }
ecdsa = { version = "0.13", optional = true, default-features = false }
ed25519 = { version = "1.3", optional = true, default-features = false }
p256 = { version = "0.10", optional = true, default-features = false, features = ["ecdsa-core"] }
p384 = { version = "0.9", optional = true, default-features = false, features = ["ecdsa"] }

[dev-dependencies]
hex-literal = "0.3"
digest = { version = "0.9", features = ["dev"] }

[features]
default = ["aead", "alloc", "digest", "signature"]
alloc = ["aead/alloc"]
signature = ["ecdsa", "ed25519", "p256", "p384"]
std = ["digest/std", "ecdsa/std", "ed25519/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
