[package]
name = "ring-compat"
version = "0.7.0-pre"
description = """
Compatibility crate for using RustCrypto's traits with the cryptographic
algorithm implementations from *ring*
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ring-compat"
repository = "https://github.com/RustCrypto/ring-compat"
categories = ["cryptography", "no-std"]
keywords = ["aead", "digest", "crypto", "ring", "signature"]
edition = "2021"
rust-version = "1.65"

[dependencies]
generic-array = { version = "0.14", default-features = false }
ring = { version = "0.16", default-features = false }

# optional dependencies
aead = { version = "0.5", optional = true, default-features = false }
digest = { version = "0.10", optional = true }
ecdsa = { version = "0.16", optional = true, default-features = false }
ed25519 = { version = "2", optional = true, default-features = false }
p256 = { version = "0.13", optional = true, default-features = false, features = ["ecdsa-core"] }
p384 = { version = "0.13", optional = true, default-features = false, features = ["ecdsa-core"] }
pkcs8 = { version = "0.10", optional = true, default-features = false }
rand_core = { version = "0.6.4", optional = true, default-features = false }
signature = { version = "2", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3"
digest = { version = "0.10", features = ["dev"] }

[features]
default = ["aead", "alloc", "digest", "rand_core", "signature"]
alloc = ["aead?/alloc", "ed25519?/alloc", "pkcs8?/alloc"]
getrandom = ["rand_core/getrandom"]
pkcs8 = ["dep:pkcs8", "ed25519?/pkcs8"]
signature = ["dep:ecdsa", "dep:ed25519", "dep:p256", "dep:p384", "dep:pkcs8", "dep:signature"]
std = ["digest?/std", "ecdsa?/std", "ed25519?/std", "pkcs8?/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
